Small fixes to some of the Italian labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6374 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels_it.properties
+++ b/applications/accounting/config/AccountingUiLabels_it.properties
@@ -29,11 +29,11 @@ AccountingBillingAccounts=Accounts di Fatturazione
 AccountingBillingAcct=Acct di Fatturazione
 AccountingBilling=Fatturazione
 AccountingBillingContactMechId=Contatto di FatturazioneMech
-AccountingBillingInformation=Informazioni sui Pagamenti dell'Acocunt
-AccountingBothInvoiceIdBillingAccountIdEmptyError=Sia l'ID della Ricevuta che l?id dell'Account non possono essere vuoti
+AccountingBillingInformation=Informazioni sui Pagamenti dell'Account
+AccountingBothInvoiceIdBillingAccountIdEmptyError=Sia l'ID della Ricevuta che l'ID dell'Account non possono essere vuoti
 AccountingComments=Commenti
 AccountingCompanyName=OFBiz: Accounting Manager
-AccountingCompanySubtitle=Progetto Nika S.r.l. Unipersonale
+AccountingCompanySubtitle=Parte della Open For Business Family dell'Open Source Software
 AccountingCreateBillingAccount=Creare un Account di Fatturazione
 AccountingCreateBillingAccountPermissionError=Security Error: to run createBillingAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission <br>
 AccountingCreateBillingAccountRole=Create Billing Account Role
@@ -55,7 +55,7 @@ AccountingManagerApplication=Applicazione dell'Accounting Manager
 AccountingMethod=Metodo
 AccountingName=Nome
 AccountingNewAccount=Nuovo Account
-AccountingNewFixedAsset=Nuovo Assetto Fissato
+AccountingNewFixedAsset=Nuovo Cespite
 AccountingNewPayment=Nuovo Fatturazione
 AccountingNoBillingAccountFound=Nessun Account di Fatturazione trovato.
 AccountingNoBillingAccountRole=Non esiste alcuna regola per l'Account di Fatturazione.
@@ -151,7 +151,7 @@ CommonWendesday=Mercoledì
 CommonWelcome=Benvenuto
 
 PageTitleEditBillingAccount=Modfica l'account di fatturazione
-PageTitleEditBillingAccountInvoices=Modifica le ricevute dell?account di Fatturazione
+PageTitleEditBillingAccountInvoices=Modifica le ricevute dell'Account di Fatturazione
 PageTitleEditBillingAccountPayments=Modifica i pagamenti dell'Account di Fatturazione
 PageTitleEditBillingAccountRoles=Modifica le regole dell'Account di Fatturazione
 PageTitleEditBillingAccountTerms=Modifica i termii dell'Account di Fatturazione
@@ -159,8 +159,8 @@ PageTitleEditGlobalGlAccount=Modifica il Global GL Account
 PageTitleFindBillingAccount=Trova gli Account(s) di Fatturazione
 PageTitleFindGlobalGlAccount=Trova i Global GL Account
 PageTitleLogin=Login
-PageTitleLookupFixedAsset=Controllo Assetto Fisso
-PageTitleLookupProduct=Controlla Prodotto
+PageTitleLookupFixedAsset=Cerca Cespite
+PageTitleLookupProduct=Cerca Prodotto
 PageTitleMain=Pagina Principale
 PartyPartyId=Party ID
 PartyRoles=Regole
