Small fixes to some of the Italian labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6375 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels_it.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_it.properties
@@ -28,7 +28,7 @@ AccountingBankName=Nome della Banca
 AccountingBillingAccount=Account di Fatturazione
 AccountingCardInfoNotBelongToYou=La carta di credito specificata non ti appartiene, non puoi consultarla nè editarla
 AccountingCardNumber=Numero della Carta
-AccountingCardSecurityCode= Security Code edella Carta
+AccountingCardSecurityCode= Security Code della Carta
 AccountingCardType=Tipo di Carta
 AccountingCompanyNameOnAccount=Nome della Società nell'Account
 AccountingCompanyNameOnCard=Nome della Società sulla Carta
@@ -95,7 +95,7 @@ CommonEdit=Edita
 CommonEmailPassword=Invia per Email la Password
 CommonExpire=Scadenza
 CommonExpires=Scade
-CommonFieldsMarkedAreRequired=I Campi marcati con (*) are sono necessari
+CommonFieldsMarkedAreRequired=I Campi marcati con (*) sono necessari
 CommonFind=Trova
 CommonForgotYourPassword=Dimenticata la Tua Password
 CommonFrom=Da
@@ -121,12 +121,12 @@ CommonNotYou=Non sei Tu
 CommonOn=Su
 CommonOpenNewWindow=Apri in una nuova Finestra
 CommonPassword=Password
-CommonPrevious=Precadente
+CommonPrevious=Precedente
 CommonProfile=Profilo
 CommonQualifier=Qualificatore
 CommonQuantity=Quantità
-CommonQuickAdd=Quick Aggiungi
-CommonQuickAddList=Quick Aggiungi all'Itinerario
+CommonQuickAdd=Inserimento Veloce
+CommonQuickAddList=Elenco per l'Inserimento Veloce
 CommonRegistred=Utente Registrato
 CommonRemove=Rimuovi
 CommonReview=Review
@@ -151,33 +151,33 @@ CommonWhere=Dove
 CommonYes=Si
 
 EcommerceActive=Attivo
-EcommerceAddAlltoCart=Aggiungi tutto all'itinerario
-EcommerceAddCheckedToCart=Aggiungi le selezionate all'itinerario
-EcommerceAddChildListsToCart=Aggiungi questa Lista e le Sottoliste all'itinerario
-EcommerceAddListToCart=Aggiungi la Lista all'itinerario
-EcommerceAddSelectedtoList=Aggiungi la selezione all'itinerario
-EcommerceAddToCart=Aggiungi all'itinerario
+EcommerceAddAlltoCart=Aggiungi tutto al carrello
+EcommerceAddCheckedToCart=Aggiungi le selezionate al carrello
+EcommerceAddChildListsToCart=Aggiungi questa Lista e le Sottoliste al carrello
+EcommerceAddListToCart=Aggiungi la Lista al carrello
+EcommerceAddSelectedtoList=Aggiungi la selezione al carrello
+EcommerceAddToCart=Aggiungi al carrello
 EcommerceAddToShoppingList=Aggiungi alla lista
 EcommerceAdjustment=Sistemazione	
 EcommerceAdjustments=Sistemazioni
-EcommerceAlwaysViewCartAfterAddingAnItem=Controlla sempre l'itinerario quando aggiungi una voce
+EcommerceAlwaysViewCartAfterAddingAnItem=Controlla sempre il carrello quando aggiungi una voce
 EcommerceAnonymous=Anonimo
 EcommerceAverageRating=Punteggio Sufficiente
-EcommerceCartHas=l'Itinerario contiene
-EcommerceCartSummary=Sommario dell'Itinerario
-EcommerceCartTotal=Totale Itinerario
+EcommerceCartHas=Il carrello contiene
+EcommerceCartSummary=Sommario del Carrello
+EcommerceCartTotal=Totale Carrello
 EcommerceCheckout=Checkout
 EcommerceChildListTotalPrice=Prezzo totale delle Destinazioni
 EcommerceChildShoppingList=Destinazioni
 EcommerceChooseVariations=Scegli il Prodotto diversificato
 EcommerceContinueShopping=Continua le Selezioni
-EcommerceCustomerReviews=impressioni di Viaggio
-EcommerceEmptyCart=Itinerario Vuoto
+EcommerceCustomerReviews=Recensioni dei Clenti
+EcommerceEmptyCart=Carrello Vuoto
 EcommerceGoToList=Vai alla Lista
 EcommerceIncludes=Include
 EcommerceItem=Elemento
 EcommerceItemN=Elemento #
-EcommerceItemsfromShopingList=Elementi di un itinerario, aggiornate le quantità dalla pagina della lista
+EcommerceItemsfromShopingList=Elementi di un carrello, aggiornate le quantità dalla pagina della lista
 EcommerceItems=Elementi
 EcommerceItemTotal=Elementi Totali
 EcommerceLastViewed=Ultimo visionato
@@ -186,56 +186,56 @@ EcommerceLastProducts=Ultimo Prodotto
 EcommerceLastSearches=Ultime Ricerche
 EcommerceLength=Lunghezza
 EcommerceListDoesNotBelong=Non vi appartiene, per cortesia riprovate di nuovo
-EcommerceListItems=Lista dei servizi in Acquisto
-EcommerceListItemsTotalPrice=Prezzo Totale dei Servizi Elencati
+EcommerceListItems=Lista degli articoli in Acquisto
+EcommerceListItemsTotalPrice=Prezzo Totale degli Articoli Elencati
 EcommerceListName=Nome dell'alenco
 EcommerceListType=Tipo di Elenco
 EcommerceMakeBooking=Effettua la prenotazione
 EcommerceNbrPersons=Persone
-EcommerceNewShoppingList=§Nuovo Itinerario
+EcommerceNewShoppingList=Nuova Lista della Spesa
 EcommerceNoParent=Nessun Collegamento
-EcommerceNoShoppingListsCreate=Nessun itinerario da selezionare createne uno nuovo
+EcommerceNoShoppingListsCreate=Nessuna Lista della Spesa da selezionare, createne una nuova
 EcommerceOnSale=In Sconto
-EcommerceParentList=Lista  Principale
+EcommerceParentList=Lista Principale
 EcommercePieces=Pezzi
-EcommercePostAnonymous=Pubblica Anonymous
+EcommercePostAnonymous=Pubblica Anonimamente
 EcommercePrice=Prezzo
 EcommerceProduct=Prodotto
 EcommercePromotion=Promozione
-EcommercePromotionalItems=Servizi in Promozione, le quantità non possono essere modificate
+EcommercePromotionalItems=Articoli in Promozione, le quantità non possono essere modificate
 EcommercePromotionInformation=Info sulla Promozione
 EcommercePromotionsApplied=Promozioni Applicate
 EcommercePublic=Pubblico
 EcommerceRanking=Classifica
 EcommerceRating=Voto (da 1 a 5)
 EcommerceRatings=Voti
-EcommerceRecalculateCart=Ricalcola l'Itinerario
+EcommerceRecalculateCart=Ricalcola il Carrello
 EcommerceRemoveSelected=Removi il selezionato
 EcommerceReplaceWithVariation=Sostituisci con la Variante
 EcommerceSave=Salva
-EcommerceShoppingCartEmpty=L'Itinerario è vuoto
-EcommerceShoppingCart=Itinerario
-EcommerceShoppingLists=Liste&nbsp;Acquisto
-EcommerceShoppingListDetail=Dettaglio dell'Itinerario
-EcommerceShoppingListEmpty=Il tuo Itinerario è Vuoto
+EcommerceShoppingCartEmpty=Il carrello è vuoto
+EcommerceShoppingCart=Carrello
+EcommerceShoppingLists=Liste della Spesa
+EcommerceShoppingListDetail=Dettaglio della Lista della Spesa
+EcommerceShoppingListEmpty=La tua Lista della Spesa è Vuota
 EcommerceShoppingListError=ERRORE: L'itinerario specificatot (with
-EcommerceShoppingListPriceTotals=Totali dell'Itinerario
-EcommerceShoppingListReorder=Informazioni sul Reordino dell'Itinerario
+EcommerceShoppingListPriceTotals=Totali della Lista della Spesa
+EcommerceShoppingListReorder=Riordinare la Lista della Spesa
 EcommerceSpecialOffers=Special Offers
 EcommerceStartDate=Start</br>Data
-EcommerceToAddSelectedItemsToShoppingList=per aggiungere i servizi selezionati all'Itinerario
-EcommerceToCart=All'Itinerario
+EcommerceToAddSelectedItemsToShoppingList=per aggiungere gli articoli selezionati alla Lista della Spesa
+EcommerceToCart=Al Carrello
 EcommerceTotalPrice=Prezzo Totale
 EcommerceTotal=Totale
 EcommerceUnitPrice=Prezzo Unitario
-EcommerceVariationToCart=della Variazione all'Itinerario
+EcommerceVariationToCart=della Variazione al Carrello
 EcommerceViewAllPromotions=Visualizza tutte le promozioni
-EcommerceViewCart=Visualiza l'Itinerario
+EcommerceViewCart=Visualiza il Carrello
 EcommerceYouMightAlsoIntrested=Potesti essere interessato a 
 EcommerceYouMightLike=Potresti volere
 EcommerceYouMust=Devi&nbsp;
 EcommerceYourPrice=Il Tuo Prezzo
-EcommerceYourShoppingCartEmpty=Il tuo Itinerario è vuoto
+EcommerceYourShoppingCartEmpty=Il tuo Carrello è vuoto
 
 EcommerceCartItemUseinPromotions=Prodotto di Uso in Promozione
 EcommerceIsAPromotionalItem=E' un Prodotto in Promozione
@@ -250,7 +250,7 @@ OrderAdjustments=Aggiustamenti
 OrderAdvancePayment=Pagamento Anticipato
 OrderAllowSplit=Consenti la divisione
 OrderBackHome=Indietro alla Home
-OrderBacktoShoppingCart=Indietro all'Itinerario
+OrderBacktoShoppingCart=Torna al Carrello
 OrderBesureIncludeOrder=Accertatevi di avere incluso la vostra prenotazione
 OrderBillUpTo=Addebita sino a
 OrderCashPaymentOnPickUp=Pagamento Cash al Ritiro
@@ -258,12 +258,12 @@ OrderCOD=Contrassegno
 OrderCommaSeperatedEmailAddresses=Potete aggiungere più emails separate da una virgola che verranno usate solo per il presente ordine
 OrderConfirmation=Conferma di Ordine
 OrderContinueShopping=Continua lo Shopping
-OrderContinueToFinalOrderReview=Vai alla reviosione vinale della prenotazione
+OrderContinueToFinalOrderReview=Vai alla revisione finale dell'ordine
 OrderDemoFrontNote=NOTA: Verrete contattati dai nostri uffici per regolarizzare il Carrello
 OrderDestination=Destinazione
 OrderDistributor=Distribuzione
-OrderEmailSentToFollowingAddresses=Il propspetto della prenotaizone verrà inviato al vostro indirizzo email
-OrderErrorShoppingCartEmpty=ERRORE: Itinerario vuoto, per favore ricominciate
+OrderEmailSentToFollowingAddresses=Il propspetto dell'ordine verrà inviato al vostro indirizzo email
+OrderErrorShoppingCartEmpty=ERRORE: Carrello vuoto, per favore ricominciate
 OrderFinalCheckoutReview=Riepilogo finale del Check Out
 OrderGift=Regalo
 OrderGiftMessage=Messaggio del Regalo
@@ -273,17 +273,17 @@ OrderHowShallWeShipIt=Come ve lo spediremo
 OrderHowShallYouPay=Come preferisci pagare
 OrderInformationAboutYou=Info su di te
 OrderIntructions=Iatruzioni
-OrderInvoice=Ricevuta
+OrderInvoice=Fattura
 OrderIsThisGift=E' un regalo
 OrderMethod=Metodo
 OrderMoneyOrder=Assegno postale/Money Order
-OrderNoOrderFound=Nessuna Prenotazione trovata
+OrderNoOrderFound=Nessun Ordine trovato
 OrderNoReturnableItems=Nessun Prodotto rimborsabile trovato nella prenotazione
 OrderNotYetOrdered=Non ancora processato
-OrderOptions=Opzioni sulla prenotazione
-OrderOrder=Prenotazione
-OrderOrderItems=Servizi della prenotazione
-OrderPleaseShipItemsBecomeAvailable=PEr favore includete i servizi nella mia prenotazione qualora essi dovessero rendersi disponibili
+OrderOptions=Opzioni sull'Ordine
+OrderOrder=Ordine
+OrderOrderItems=Articoli dell'Ordine
+OrderPleaseShipItemsBecomeAvailable=Per favore spedite gli articoli del mio ordine qualora essi dovessero rendersi disponibili
 OrderPleaseWaitUntilBeforeShipping=Please wait until the entire order is ready before shipping
 OrderPoNumber=PO Number
 OrderPurchaseOrderNumber=Numero di Acquisto della Prenotazione
@@ -336,8 +336,8 @@ PageTitleProductReview=Review del Prodotto
 PageTitleQuickAdd=Quick Add
 PageTitleRequestReturn=Request Return
 PageTitleSearchResults=Risultati della Ricerca
-PageTitleShoppingCart=Itinerario
-PageTitleShoppingList=Lista Itinerario  
+PageTitleShoppingCart=Carrello
+PageTitleShoppingList=Lista della Spesa
 PageTitleViewProfile=Visualizza il Profilo
 PartyAddNewAddress=Nuovo Indirizzo
 PartyAddNewPersonalInformation=Aggiungi la nuova Informazione Personale
@@ -451,7 +451,7 @@ PartyWeight=Peso
 PartyYearsWork=Anni di Lavoro
 PartyZipCodeMissing=Manca il CAP
 PartyZipCode=CAP
-ProductAddProductsUsingDefaultQuantities=Aggiungi i servizi in questa categoria nell'itinerario utilizzando le quantità predefinite
+ProductAddProductsUsingDefaultQuantities=Aggiungi gli articoli in questa categoria all'ordine utilizzando le quantità predefinite
 ProductAdvancedSearch=Ricerca Avanzata
 ProductAdvancedSearchIn=Ricerca Avanzata per
 ProductAdvancedSearchinCategory=Ricerca Avanzata per la categoria
