Expanded and made more flexible the getPartyNameForDate service, and now using it in various order view places in the order manager to get the name for the orderDate and not just the current name; while doing this fixed problem in ecommerce causing the name and other person information updates to cause an error; also fixed a bunch of bad messages and old use of PackageMessages properties files to use the new pattern and work more reliably, including fix of specific messages that weren't being found
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6405 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_pt_PT.properties
+++ b/applications/order/config/OrderUiLabels_pt_PT.properties
@@ -81,3 +81,21 @@ cart.addToCart.noProductInfoPassed = No product information passed, not adding a
 cart.add_category_defaults         = Added ${totalQuantity} items to the cart.
 cart.quantity_not_positive_number  = Quantity must be a positive number
 item.product_not_found = Product not found, not adding to cart. [productId: ${productId}]
+
+# ========================================
+# org.ofbiz.order.order messages
+# ========================================
+
+items.none=ERRO: N\u00e3o existem itens para encomendar
+
+# 0=Identifica\u00e7\u00e3o de produto
+product.not_found=Imposs\u00edvel encontrar o produto com essa identifica\u00e7\u00e3o [{0}], n\u00e3o pode ser adquirido.
+
+# 0=Nome de Produto, 1=Identifica\u00e7\u00e3o de Produto
+product.not_yet_for_sale=Tentou encomendar o Produto {0} (Identifica\u00e7\u00e3o de Produto: {1}). Este produto ainda est\u00e1 indispon\u00edvel para venda. Por favor, remova-o desta encomenda.
+
+# 0=Nome de Produto, 1=Identifica\u00e7\u00e3o de Produto
+product.no_longer_for_sale=Tentou encomendar o Produto {0} (Identifica\u00e7\u00e3o de Produto: {1}). Este produto j\u00e1 se encontra indispon\u00edvel para venda.Por favor remova-o desta encomenda.
+
+# 0=Nome de Produto, 1=Identifica\u00e7\u00e3o de Produto
+product.out_of_stock= O produto {0} identificado como {1} j\u00e1 n\u00e3o se encontra em stock. Por favor tente reduzir a quantidade ou remov\u00ea-lo desta encomenda.
