--- a/applications/party/config/PartyUiLabels_pt_PT.properties
+++ b/applications/party/config/PartyUiLabels_pt_PT.properties
@@ -303,3 +303,26 @@
  PartyZipCode=C\u00f3digo Postal
  party.id_is_digit=ID de Sec\u00e7\u00e3o especificada n\u00e3o pode come\u00e7ar com d\u00edgitos, Identifica\u00e7\u00f5es num\u00e9ricas reservadas para Identifica\u00e7\u00f5es auto-geradas.
  party.id_generation_failure=Erro: Falha na gera\u00e7\u00e3o de Nova Identifica\u00e7\u00e3o de Sec\u00e7\u00e3o
+
+# ========================================
+# org.ofbiz.party.party messages
+# ========================================
+
+party.id_is_digit=ID de Sec\u00e7\u00e3o especificada n\u00e3o pode come\u00e7ar com d\u00edgitos, Identifica\u00e7\u00f5es num\u00e9ricas reservadas para Identifica\u00e7\u00f5es auto-geradas.
+
+party.id_generation_failure=Erro: Falha na gera\u00e7\u00e3o de Nova Identifica\u00e7\u00e3o de Sec\u00e7\u00e3o
+
+person.create.party_exists_not_person_type=Imposs\u00edvel criar indiv\u00edduo, j\u00e1 existe uma sec\u00e7\u00e3o com essa identifica\u00e7\u00e3o e n\u00e3o \u00e9 um tipo de indiv\u00edduo
+
+person.create.person_exists=Imposs\u00edvel criar Indiv\u00edduo, j\u00e1 existe um com a Identifica\u00e7\u00e3o de sec\u00e7\u00e3o especificada.
+
+# 0=mensagem excepcional
+person.create.db_error= Imposs\u00edvel adicionar informa\u00e7\u00e3o de indiv\u00edduo (falha de escrita): {0}
+
+# 0=mensagem excepcional
+person.update.read_failure=Imposs\u00edvel actualizar informa\u00e7\u00e3o do indiv\u00edduo (falha de leitura): {0}
+person.update.not_found=Imposs\u00edvel actualizar informa\u00e7\u00e3o do indiv\u00edduo (indiv\u00edduo n\u00e3o encontrado)
+# 0=mensagem excepcional
+person.update.write_failure=Imposs\u00edvel actualizar informa\u00e7\u00e3o do indiv\u00edduo (falha de escrita): {0}
+person.update.success=Indiv\u00edduo actualizado com sucesso.
+ 
