--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -1,19 +1,19 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2008
-# This file is distributed under the same license as the ofbiz package.
-# Adam Heath <doogie@brainfood.com>, 2008.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: ofbiz 684389\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: ofbiz@packages.debian.org\n"
 "POT-Creation-Date: 2008-11-18 10:54-0600\n"
-"PO-Revision-Date: 2008-11-18 10:54-0600\n"
-"Last-Translator: Adam Heath <doogie@brainfood.com>\n"
-"Language-Team: English <en@li.org>\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: password
