--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 
 Welcome to Apache OFBiz!
 
-If you have a release build all you need to run OFBiz is a 1.5 series
-JDK (not just the JRE, the full J2SDK).
+If you have a release build all you need to run OFBiz is a 
+1.6 (version 6) JDK (not just the JRE, the full J2SDK).
 
 However if you have downloaded ofbiz from SVN then you should
 load the demo data (strongly advised) with the following command
@@ -23,7 +23,7 @@ Once OFBiz starts, you can look at the demo storefront at:
 http://localhost:8080/ecommerce/
 
 and the administration interface at:
-http://localhost:8080/webtools/
+https://localhost:8443/webtools/
 
 You can log in with the user "admin" and password "ofbiz".
 
@@ -31,7 +31,7 @@ For more details about running a build, or for information on
 getting, building, and running the source please see the
 Apache OFBiz Setup Guide:
 
-http://docs.ofbiz.org/x/rwM
+http://cwiki.apache.org/confluence/display/OFBADMIN/Demo+and+Test+Setup+Guide
 
 Note that running with the default configuration uses an
 embedded Java database (Apache Derby), and embedded application
@@ -40,7 +40,7 @@ server components such as Tomcat, Geronimo (transaction manager), etc.
 To prepare OFBiz for production use the Basic Production Setup Guide
 is a great place to start. It is available here:
 
-http://docs.ofbiz.org/x/j
+http://cwiki.apache.org/confluence/display/OFBTECH/Apache+OFBiz+Technical+Production+Setup+Guide
 
 For additional resources please see the OFBiz web site.
 
