--- a/README
+++ b/README
@@ -2,13 +2,15 @@
 Welcome to Apache OFBiz!
 
 If you have a release build all you need to run OFBiz is a 
-1.6 (version 6) JDK (not just the JRE, the full J2SDK).
+1.6 (version 6) JDK (not just the JRE, the full JDK).
+http://java.sun.com/javase/downloads/index.jsp
 
 However if you have downloaded ofbiz from SVN then you should
 load the demo data (strongly advised) with the following command
-on the command line:
+on the command line: (being in the OFbiz directory)
 
-ant run-install
+linux: ./ant run-install
+windows: ant run-install 
 
 Once that is properly setup just run the executable jar file
 that comes with OFBiz, which is ofbiz.jar. To do this on the
@@ -16,14 +18,14 @@ command line you would run:
 
 java -Xms128M -Xmx512M -jar ofbiz.jar
 
-There are also start scripts for Windows and Unix-based
+Even better use the startup scripts for Windows and Unix-based
 operating systems, namely startofbiz.bat and startofbiz.sh.
 
 Once OFBiz starts, you can look at the demo storefront at:
-http://localhost:8080/ecommerce/
+http://localhost:8080/ecommerce
 
 and the administration interface at:
-https://localhost:8443/webtools/
+https://localhost:8443/webtools
 
 You can log in with the user "admin" and password "ofbiz".
 
